@@ -27,9 +27,9 @@ $moduleDirNameUpper = mb_strtoupper($moduleDirName);
 
 // ------------------- Informations ------------------- //
 $modversion = [
-    'version'             => 1.08,
-    'module_status'       => 'RC-1',
-    'release_date'        => '2021/07/25',
+    'version'             => '1.8.0',
+    'module_status'       => 'RC-2',
+    'release_date'        => '2022/02/20',
     'name'                => _MI_XOOPSTUBE_NAME,
     'description'         => _MI_XOOPSTUBE_DESC,
     'official'            => 1, //1 indicates supported by XOOPS Dev Team, 0 means 3rd party supported
