@@ -1,3 +1,7 @@
+<h5>1.8.0 RC-2       [2022-02-20]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.27, PHP 8.0.16
+<hr>
+- index.html in /preloads (mamba)
+
 <h5>1.08 RC-1       [2021-07-25]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.21, PHP 8.0.8
 <hr>
 - fix setting expiration date (mamba)
